# API-Security-Testing-Engine

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
apisec/: __init__.py  cli.py  config.py  findings.py  http_client.py  payload_engine.py  scanner.py
apisec/checks/: __init__.py  base.py  bfla.py  bola.py  broken_auth.py  injection.py  mass_assignment.py  misconfig.py  rate_limit.py  shadow_endpoints.py  ssrf.py
apisec/demo/: __init__.py  synthetic_findings.py
apisec/reporting/: __init__.py  html_report.py  json_report.py
apisec/reporting/templates/: report.html.j2
tests/: test_checks_bola.py  test_checks_broken_auth.py  test_config.py  test_demo.py  test_findings.py  test_payload_engine.py  test_reporting.py
