[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-security-engine"
version = "1.0.0"
description = "OWASP API Security Top 10 (2023) aligned automated testing engine for REST APIs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Garvit Kohli" }
]
keywords = ["security", "api", "owasp", "pentest", "appsec", "dast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
]

[project.scripts]
apisec = "apisec.cli:main"

[tool.setuptools.packages.find]
include = ["apisec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
